added forecast and alerts api and makingmajor changes to UI

--- a/src/app/components/main-ui/main-ui.component.html
+++ b/src/app/components/main-ui/main-ui.component.html
@@ -11,7 +11,7 @@
                     autoSizeInput 
                     [extraWidth]="30" 
                     [includeBorders]="false"
-                    value="Inida"
+                    value="India"
                     #query>
                 <span *ngIf="message">, it's {{message}}.</span>
             </p>
