--- a/src/app/components/weather-card/weather-card.component.html
+++ b/src/app/components/weather-card/weather-card.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center" class="card" style="width:auto;">
+<div class="container text-center">
     <div class="row justify-content-center" *ngIf="visibility">
         <div class="col-md-6">
             <div class="spinner-border m-5 text-primary" style="width: 4rem; height: 4rem;">
@@ -8,42 +8,35 @@
     </div>
     <div *ngIf="!visibility">
         <br>
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <p class="display-6 p2">{{weatherData?.location?.name}} , {{weatherData?.location?.country}}</p>
-        </div>
-    </div>
-    
-    <div>
         <div class="row justify-content-center">
-            <div class="col display-2" *ngIf="weatherData">
-                {{temp}} <img src="{{weatherData?.current?.condition?.icon}}" alt="" height="auto" width="10%">
-            </div>
-            <div class="col display-2" *ngIf="!weatherData">
-                Location not found <br>
+            <div class="col-md-6">
+                <p class="display-6 p2">{{weatherData?.location?.name}} , {{weatherData?.location?.country}}</p>
             </div>
         </div>
-    </div>
-    <div class="row p1">
-            <div class="col">
-                <img src="https://icon-library.com/images/pressure-icon-png/pressure-icon-png-13.jpg" alt="x" width="20%" height="auto"> {{pressure}} PS
-            </div>
-            <div class="col">
-                <img src="\assets\icons\humidity.png" alt="humidity.png" width="20%" height="auto"> {{humidity}} %
-            </div>
-            <div class="col">
-                <img src="\assets\icons\wind.png" alt="wind.png" width="20%" height="auto"> {{wind}} km/h
-            </div>
-    </div>
-    <br>
-    <div class="row justify-content-center">
-        <div class="col-2">
-            <div class="form-check form-switch">
-                <input class="form-check-input" [(ngModel)]="  isFchecked" (change)="unitSwitch()" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">ºF</label>
+
+        <div>
+            <div class="row justify-content-center">
+                <div class="col display-2" *ngIf="weatherData">
+                    {{temp}} <img src="{{weatherData?.current?.condition?.icon}}" alt="" height="auto" width="10%"><br>
+                    <div class="col-2">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" [(ngModel)]="  isFchecked" (change)="unitSwitch()" type="checkbox"
+                                id="flexSwitchCheckDefault">
+                            <h5 for="flexSwitchCheckDefault">View in ºF</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col display-2" *ngIf="!weatherData">
+                    Location not found <br>
+                </div>
             </div>
         </div>
-    </div>
-    <br>
+        <br>
+        <div class="row justify-content-center">
+            
+        </div>
+        <br>
+        <app-measures-card [measuresArray]="measuresArray"></app-measures-card>
+        <br>
     </div>
 </div>
