added forecast card

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-                <a class="nav-link" routerLink="forecast">Forecast</a>
-                <a class="nav-link" routerLink="alerts">Alerts</a>
+                <!-- <a class="nav-link" routerLink="forecast">Forecast</a>
+                <a class="nav-link" routerLink="alerts">Alerts</a> -->
             </div> 
         </div>
     </div>
